Read server hosts from system properties in tests
- Read server hosts for hub, job-api and localstack from system
properties (if they are available) during tests, otherwise default to localhost

Signed-off-by: Ansari, Mujammil <mujammil.ansari@here.com>